<?xml version="1.0"?>
<package format="2">
  <name>gps_to_tf</name>
  <version>0.3.1</version>
  <description>Connects agents in a TF tree using only GPS information (sensor_msgs/NavSatFix)</description>

  <maintainer email="chriswsuarez@utexas.edu">Chris Suarez</maintainer>

  <license>Proprietary</license>

  <author email="chriswsuarez@utexas.edu">Chris Suarez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gps_common</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

</package>
